subdir = scripts

AUTOMAKE_OPTIONS = nostdinc no-dependencies

SUBDIRS = 

EXTRA_DIST= \
	tests/sanity.fim  \
	tests/maxlenscript.fim \
	tests/version.sh \
	example/oneline.fim		\
	rc/fimrc.eog		\
	rc/fimrc.gqview		\
	rc/fimrc.kuickshow	\
	rc/fimrc.lazy		\
	utilities/screenshot.sh	\
	maintenance/configure-*.sh \
	maintenance/yacc2grammar.h \
	maintenance/yacc2grammar.awk \
	utilities/fimscan.sh

